# spacebee

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml
src/spacebee/: auth.py  config.py  main.py
src/spacebee/adapters/web/: __init__.py  router.py  view.py
src/spacebee/adapters/web/templates/: dashboard.html
src/spacebee/adapters/webdav/: moonreader.py  passthrough.py  router.py
src/spacebee/atproto/: bookhive.py  client.py  identity.py
src/waggle/: auth.py  config.py  main.py
src/waggle/adapters/web/: router.py  view.py
src/waggle/adapters/web/templates/: dashboard.html
src/waggle/adapters/webdav/: moonreader.py  passthrough.py  router.py
src/waggle/atproto/: bookhive.py  client.py
tests/: test_atproto_client.py  test_bookhive_parsing.py  test_identity.py  test_security_guards.py  test_web_e2e.py  test_web_view.py  test_webdav_e2e.py
